# web_development

./: README.md
dockerizing_flask_with_gunicorn_proj/: Dockerfile  Makefile
dockerizing_flask_with_gunicorn_proj/bkup/: Dockerfile  Makefile  activity-service.env  start
dockerizing_flask_with_gunicorn_proj/bkup/files/: activity-service.conf  lighttpd.conf  pipe_file.py  root-crontab  wsgi.py
dockerizing_flask_with_gunicorn_proj/files/: flask_web_app.conf  wsgi.py
flask_with_gunicorn_proj/: MANIFEST.in  README.md  dotpypirc  requirements.txt  setup.cfg  setup.py
flask_with_gunicorn_proj/bkup/: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
flask_with_gunicorn_proj/flask_web_app/: __init__.py  wsgi.py
flask_with_gunicorn_proj/flask_web_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flask_with_gunicorn_proj/flask_web_app/controller/: app.py
flask_with_gunicorn_proj/flask_web_app/settings/: _version.py
flask_with_gunicorn_proj/flask_web_app/view/submission/: __init__.py
