[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[flake8]
max-line-length=120
ignore=E265,W504,W503

[yapf]
based_on_style = google
spaces_before_comment = 2
split_before_logical_operator = true
column_limit = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = flask_web_app/settings/_version.py
versionfile_build = flask_web_app/settings/_version.py
tag_prefix = ''
verbose=True
